@@ -100,7 +100,7 @@ class TestConstrainTypes(atcttestcase.ATCTSiteTestCase):
 
         # Make sure immediately-addable are inherited
         self.assertEqual(inner.getImmediatelyAddableTypes(),
-                                self.af.getImmediatelyAddableTypes())
+                         self.af.getImmediatelyAddableTypes())
 
         # Create a new unprivileged user who can only access the inner folder
         self.portal.acl_users._doAddUser('restricted', 'secret', ['Member'], [])
@@ -148,9 +148,19 @@ class TestConstrainTypes(atcttestcase.ATCTSiteTestCase):
 
         # Make sure immediately-addable are set to default
         self.assertEqual(inner.getImmediatelyAddableTypes(),
-                                inner.getLocallyAllowedTypes())
+                         inner.getLocallyAllowedTypes())
+        self.assertEqual(inner.allowedContentTypes(), outer.allowedContentTypes())
 
-    def test_acquireFromCustomHetereogenousParent(self):
+        # Login the new user
+        self.portal.acl_users._doAddUser('restricted', 'secret', ['Member'], [])
+        inner.manage_addLocalRoles('restricted', ('Manager',))
+        user = self.portal.acl_users.getUserById('restricted')
+        newSecurityManager(None, user)
+        self.assertEqual([t.getId() for t in inner.allowedContentTypes()],
+                             ['Folder', 'Image'])
+
+
+    def test_acquireFromCustomHetereogenousParentWithConstraint(self):
         self.loginAsPortalOwner()
         cp = self.portal.portal_types.manage_copyObjects(['Folder'])
         self.portal.portal_types.manage_pasteObjects(cp)
@@ -180,6 +190,57 @@ class TestConstrainTypes(atcttestcase.ATCTSiteTestCase):
         self.assertEqual([fti.getId() for fti in folder2.allowedContentTypes()],
                              ['Image'])
         self.assertEqual(folder2.getImmediatelyAddableTypes(), ['Image'])
+
+        # Login the new user
+        self.portal.acl_users._doAddUser('restricted', 'secret', ['Member'], [])
+        folder2.manage_addLocalRoles('restricted', ('Manager',))
+        user = self.portal.acl_users.getUserById('restricted')
+        newSecurityManager(None, user)
+        self.assertEqual([t.getId() for t in self.af.allowedContentTypes()],
+                             [])
+        self.assertEqual([t.getId() for t in folder2.allowedContentTypes()],
+                             ['Image'])
+
+
+    def test_acquireFromCustomHetereogenousParentWithoutConstraint(self):
+        self.loginAsPortalOwner()
+        cp = self.portal.portal_types.manage_copyObjects(['Folder'])
+        self.portal.portal_types.manage_pasteObjects(cp)
+        self.portal.portal_types.manage_renameObject('copy_of_Folder', 'Folder2')
+
+        # Let folder use a restricted set of types
+        self.portal.portal_types.Folder.filter_content_types = 1
+        self.portal.portal_types.Folder.allowed_content_types = \
+            ('Document', 'Image', 'News Item', 'Topic', 'Folder', 'Folder2')
+
+        self.portal.portal_types.Folder2.filter_content_types = 1
+        self.portal.portal_types.Folder2.allowed_content_types = \
+            ('Document', 'Image', 'Topic', 'Folder')
+
+        # Set up outer folder with restrictions disabled
+        self.af.setConstrainTypesMode(constraintypes.DISABLED)
+
+        # Create type to acquire
+        self.af.invokeFactory('Folder2', 'folder2', title='folder2')
+        folder2 = self.af.folder2
+        folder2.setConstrainTypesMode(constraintypes.ACQUIRE)
+
+        # News item is not in addable types because it is globally forbidden in Folder2 type
+        # and Folder is not in addable types because it is locally forbidden in folder2 parent
+        self.assertEqual([fti.getId() for fti in folder2.allowedContentTypes()],
+                             ['Document', 'Folder', 'Image', 'Topic'])
+        self.assertEqual(folder2.getImmediatelyAddableTypes(),
+                             ['Document', 'Folder', 'Image', 'Topic'])
+
+        # Login the new user
+        self.portal.acl_users._doAddUser('restricted', 'secret', ['Member'], [])
+        folder2.manage_addLocalRoles('restricted', ('Manager',))
+        user = self.portal.acl_users.getUserById('restricted')
+        newSecurityManager(None, user)
+        self.assertEqual([t.getId() for t in self.af.allowedContentTypes()],
+                             [])
+        self.assertEqual([t.getId() for t in folder2.allowedContentTypes()],
+                             ['Document', 'Folder', 'Image', 'Topic'])
 
 tests.append(TestConstrainTypes)
 
